# WolkGatewayModule-Bluetooth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  scPi.sh
.github/workflows/: cmake-build-and-test.yml
application/: Application.cpp  Configuration.cpp  Configuration.h
dependencies/: install_bluez.sh
example/: Application.cpp  Configuration.cpp  Configuration.h  beacon_ids.xml  pi.sh  segfaults
src/: Adapter.cpp  Adapter.h  ScanDevice.h  Scanner.cpp  Scanner.h  Wolk.cpp  hello.cpp  utils.cpp  utils.h
